package task_2.enums;
public enum MenuBar {
    SORT,
    FIND,
    EXIT
}
